--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
 <nav class="navbar">
-    <div class="navbar">
-        <div class="navbar__container">
-<img src="images/logo.png" alt="The nomads">
+    <div class="navbar__container">    
+<a href="/" id="navbar__logo">The<span>Nomads</span></a>
 <div class="navbar__toggle" id="menu">
     <span class="bar"></span>
     <span class="bar"></span>
