--- a/index.html
+++ b/index.html
@@ -36,16 +36,7 @@
 </div>
     </div>
 </nav>
-
-
-
-
-
-
-
-
-
-
-    <script src="index.js"></script>
+<script src="index.js
+"></script>
 </body>
 </html>
