modified css and html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
+
     <title>Livestock Breed</title>
 </head>
 <body>
+    <!--  navabar section -->
 <nav class="navbar">
     <div class="navbar__container">    
-<a href="/" id="navbar__logo">The<span>Nomads</span></a>
+<a href="/" id="navbar__logo"><i class="fa-solid fa-crystal-ball"></i> The<span>Nomads</span></a>
 <div class="navbar__toggle" id="menu">
     <span class="bar"></span>
     <span class="bar"></span>
@@ -36,6 +39,23 @@
 </div>
     </div>
 </nav>
+<!-- Hero section -->
+<div class="main">
+    <div class="main__container">
+        <div class="main__content">
+            <h1>The CATTLE AND SHEEP BREEDS THAT CAN CHANGE YOUR LIFE</h1>
+            <p>The Past definateley cannot define your future ,well I have the <br>
+            news for Livestock keepers who for the past decades have invested in livestock <br>
+        keeping but have not yet benefitted with them,the good news is that we can change that by rearing <br>
+    investing in the right kind of breeds that would benefit us .</p>
+    <button class="main__btn"><a href="/">Get Started</a></button>
+
+        </div>
+        <div class="main__img__container">
+            <img src="images/background.jpg" alt="nomads pic" id="main__img">
+        </div>
+    </div>
+</div>
 <script src="index.js
 "></script>
 </body>
