--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
     <title>Livestock Breed</title>
 </head>
 <body>
@@ -24,7 +26,9 @@
     <a href="/" class="navbar__links">Home</a>
 </li>
 <li class="navbar__item">
-    <a href="/" class="navbar__links">Blogs</a>
+    <a href="/" class="navbar__links">Blogs
+
+    </a>
 </li>
 <li class="navbar__item">
     <a href="/" class="navbar__links">Services</a>
@@ -44,10 +48,10 @@
     <div class="main__container">
         <div class="main__content">
             <h1>The CATTLE AND SHEEP BREEDS THAT CAN CHANGE YOUR LIFE</h1>
-            <p>The Past definateley cannot define your future ,well I have the <br>
-            news for Livestock keepers who for the past decades have invested in livestock <br>
-        keeping but have not yet benefitted with them,the good news is that we can change that by rearing <br>
-    investing in the right kind of breeds that would benefit us .</p>
+            <p>The Past definateley cannot define your future ,well I have news <br> 
+                for Livestock keepers who for the past decades have invested in livestock <br>
+                keeping but have not yet benefitted with them,the good news is that we can change <br>
+                that by rearing investing in the right kind of breeds that would benefit us .</p>
     <button class="main__btn"><a href="/">Get Started</a></button>
 
         </div>
@@ -55,6 +59,19 @@
             <img src="images/background.jpg" alt="nomads pic" id="main__img">
         </div>
     </div>
+</div>
+
+<!-- body section -->
+<div class="box2">
+    <h1>The most profitable Cattle Breeds</h1>
+    <h2>1.Kenyan Sahiwal</h2>
+    <p> This breed essentially has a gread advantage as it serves as <br>
+        a dual-purpose breed,meaning that it can provide qood quality interms <br>
+        of  milk and meat.When you crossbreed with the exotic breeds you will <br>
+        improve their meat and milk quality. <br>
+
+        <img src="images/sahiwal.jpg" alt="sahiwal Breed" id="sahiwal">
+    </p>
 </div>
 <script src="index.js
 "></script>
