--- a/index.html
+++ b/index.html
@@ -64,14 +64,42 @@
 <!-- body section -->
 <div class="box2">
     <h1>The most profitable Cattle Breeds</h1>
+<div id="sahiwal">
     <h2>1.Kenyan Sahiwal</h2>
     <p> This breed essentially has a gread advantage as it serves as <br>
-        a dual-purpose breed,meaning that it can provide qood quality interms <br>
-        of  milk and meat.When you crossbreed with the exotic breeds you will <br>
-        improve their meat and milk quality. <br>
-
+       a dual-purpose breed,meaning that it can provide qood quality <br>
+       interms of  milk and meat.When you crossbreed with the exotic <br>
+       breeds you will improve their meat and milk quality. <br>
         <img src="images/sahiwal.jpg" alt="sahiwal Breed" id="sahiwal">
     </p>
+</div>
+    <div id="freshian">
+        <h2>2.Jersey cattle</h2>
+        <p>
+Jersey breed is well known for high amount of milk production <br>
+and their milk have a higher butter fat content thus their milk <br>
+prices have a higher value.Have an advantage of performing well <br>
+in various weather conditions and are suitable for crossbreeding <br>
+<img src="images/Jersey-cow.jpg" alt="photo of Jersey-cow">
+        </p>
+    </div>
+<div id="ayrshire">
+    <h2>3.Ayrshire</h2>
+    <p>This breed is considered one of the best for crossbreeding <br>
+    as they have a very high milk production potential and thei <br>
+    come into milk at about two years of age. </p>
+    <br>
+    <img src="images/ayrshire.jpg" alt="photo of Ayrshire">
+</div>
+</div>
+<div class="box3">
+<h1>The most profitable Sheep Breeds </h1>
+<div id="dorper">
+    <h2>Dorper</h2>
+    <p>The Dorper breed is one of the best breed worth rearing <br>
+    </p>
+
+</div>
 </div>
 <script src="index.js
 "></script>
