--- a/index.html
+++ b/index.html
@@ -130,3 +130,27 @@ mantainance.
 </section>
 
 <!-- footer section -->
+
+<footer>
+    <div class="main__box">
+        <div class="left box">
+            <h2>About us</h2>
+            <div class="content"> 
+                <p>The nomads Arcade is a well established livestock 
+                   research <br>organization that has a dream of impacting <br>
+                   positively on the life of the nomads  </p>
+            <div class="social">
+<a href="#"><span class="fab fa-facebook-f"></span> </a>
+<a href="#"><span class="fab fa-twitter"></span> </a>
+<a href="#"><span class="fab fa-instagram"></span> </a>
+<a href="#"><span class="fab fa-youtube"></span> </a>
+
+
+            </div>
+            </div>
+        </div>
+        <div class="center box">
+            <h2>Adress</h2>
+            <div class="content">
+                <div class="place">
+                    <span class="fas fa-map-marker-alt"></span>
