--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!--  navabar section -->
 <nav class="navbar">
     <div class="navbar__container">    
-<a href="/" id="navbar__logo"><i class="fa-solid fa-crystal-ball"></i> The<span>Nomads</span></a>
+<a href="#" id="logo_n">The Normads <span> Arcade</span>
+    <img src="images/logo.png" alt="" id="img__logo">
+</a>
 <div class="navbar__toggle" id="menu">
     <span class="bar"></span>
     <span class="bar"></span>
@@ -89,14 +91,14 @@ in various weather conditions and are suitable for crossbreeding <br>
 <div id="ayrshire">
     <h2>2.Ayrshire</h2>
     <p>This breed is considered one of the best for crossbreeding <br>
-    as they have a very high milk production potential and thei <br>
+    as they have a very high milk production potential and theiy <br>
     come into milk at about two years of age. </p>
     
     <img src="images/ayrshire.jpg" alt="photo of Ayrshire">
 </div>
 </div>
 <div class="box3">
-<h1>The most profitable Sheep Breeds </h1>
+<h1 id="head">The most profitable Sheep Breeds </h1>
 <div id="dorper">
     <h2>1.Dorper</h2>
     <p>The Dorper breed is one of the best breed worth rearing <br>
@@ -107,7 +109,7 @@ range conditions </p>
 <img src="images/dorper.jpg" alt="dorper">
 </div>
 <div id="red">
-<h2> Red Maasai</h2>
+<h2>3.Red Maasai</h2>
 <p>These kind of breed is well known for being tolerant to <br>
 parasites and can perform well under semi-arid regions,this <br>
 would be advantageous as they have high birth rate and low <br>
@@ -118,7 +120,7 @@ bluetoungue virus.
 
 </div>
 <div id="somali">
-<h2>Somali Sheep</h2>
+<h2>2.Somali Sheep</h2>
 <p>
 They are also referred to as blackhead sheep and are well <br>
 known for their intensive meat production and have an easy <br>
@@ -136,9 +138,11 @@ mantainance.
         <div class="left box">
             <h2>About us</h2>
             <div class="content"> 
-                <p>The nomads Arcade is a well established livestock 
-                   research <br>organization that has a dream of impacting <br>
-                   positively on the life of the nomads  </p>
+                <p>The nomads Arcade is a well <br>
+                established livestock research <br>
+                organization that has a  dream <br> of
+                impacting positively on the life of
+the nomads </p>
             <div class="social">
 <a href="#"><span class="fab fa-facebook-f"></span> </a>
 <a href="#"><span class="fab fa-twitter"></span> </a>
