--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
 </div>
 <ul class="navbar__menu">
 <li class="navbar__item">
-    <a href="/" class="navbar__links">Home</a>
+    <a href="#home" class="navbar__links">Home</a>
 </li>
 <li class="navbar__item">
-    <a href="/" class="navbar__links">Blogs
+    <a href="#Blogs" class="navbar__links">Blogs
 
     </a>
 </li>
 <li class="navbar__item">
-    <a href="/" class="navbar__links">Services</a>
+    <a href="#Blogs" class="navbar__links">Services</a>
 </li>
 <li class="navbar__item">
-    <a href="/" class="navbar__links">Contact Us</a>
+    <a href="#contact us" class="navbar__links">Contact Us</a>
 </li>
 <li class="nav__btn">
-    <a href="/" class="button">Sign Up</a>
+    <a href="#sign up" class="button">Sign Up</a>
 </li>
 </ul>
 </div>
@@ -192,6 +192,7 @@ the nomads </p>
                        </div>
                    </div>
                </footer>
+               <div id="visits">127.0.0.1:5500/index.html</div>
                
                <script src="index.js
                "></script>
