--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 </div>
 
 <!-- body section -->
-<section>
+<section> 
+    <h1 id="boxx">The most profitable Cattle Breeds</h1>
+
 <div class="box2">
-    <h1>The most profitable Cattle Breeds</h1>
+   
 <div id="sahiwal">
     <h2>1.Kenyan Sahiwal</h2>
     <p> This breed essentially has a gread advantage as it serves as <br>
