--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="main">
     <div class="main__container">
         <div class="main__content">
-            <h1></h1>
+            <h1>The CATTLE AND SHEEP BREEDS THAT CAN CHANGE YOUR LIFE</h1>
             <p>The Past definateley cannot define your future ,well I have news <br> 
                 for Livestock keepers who for the past decades have invested in livestock <br>
                 keeping but have not yet benefitted with them,the good news is that we can change <br>
