--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@ the nomads </p>
                        </div>
                    </div>
                </footer>
-               <div id="visits">127.0.0.1:5500/index.html</div>
+              
                <!-- Main div code -->
+               <div class="login__details">
 	<div id="main">
         <div class="h-tag">
         <h2>Welcome To My Account Login</h2>
@@ -221,6 +222,7 @@ the nomads </p>
         </div>
            <!-- login box div ending here.. -->
         </div>
+    </div>
         <!-- Main div ending here... -->
                
                <script src="index.js
